--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "google-auth-library": "^9.14.0",
     "handlebars": "^4.7.8",
     "http-errors": "^2.0.0",
     "joi": "^17.13.3",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.5.0",
+    "@redocly/cli": "^1.20.0",
     "eslint": "^9.5.0",
     "globals": "^15.6.0",
     "nodemon": "^3.1.4",
