--- a/src/.env.example
+++ b/src/.env.example
@@ -3,8 +3,15 @@ MONGODB_USER=
 MONGODB_PASSWORD=
 MONGODB_URL=
 MONGODB_DB=
-APP_DOMAIN=
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASSWORD=
+SMTP_FROM=
 JWT_SECRET=
-CLOUDINARY_CLOUD_NAME=
-CLOUDINARY_API_KEY=
+APP_DOMAIN=
 CLOUDINARY_API_SECRET=
+CLOUDINARY_API_KEY=
+CLOUDINARY_CLOUD_NAME=
+GOOGLE_AUTH_CLIENT_ID=
+GOOGLE_AUTH_CLIENT_SECRET=
