--- a/swagger/components/shemas/contacts.yaml
+++ b/swagger/components/shemas/contacts.yaml
@@ -31,4 +31,8 @@ properties:
   photo:
     description: 'Link to contacts photo'
     type: string
-    example: <https://res.cloudinary.com/uqwgdu/image/upload/image.png>
+    example: 'https://res.cloudinary.com/divut7dkh/image/upload/v1724141207/photo/w2…'
+  isFavourite:
+    description: 'favorite contact'
+    type: boolean
+    example: true
