--- a/swagger/paths/Contacts/{id}/patch.yaml
+++ b/swagger/paths/Contacts/{id}/patch.yaml
@@ -38,7 +38,11 @@ requestBody:
           photo:
             description: 'Link to contacts photo'
             type: string
-            example: 'https://res.cloudinary.com/uqwgdu/image/upload/image.png'
+            example: 'https://res.cloudinary.com/divut7dkh/image/upload/v1724141207/photo/w2…'
+          isFavourite:
+            description: 'favorite contact'
+            type: boolean
+            example: true
 responses:
   '200':
     description: 'Successfully patched contact by id'
